# switchOn_Backend

./: HealthCheck.py  database.py  main.py  pyproject.toml  schemas.py
domain/: cctvEntity.py
routers/: cctvController.py  healthCheck.py  videoController.py
routers/cctv/: cctvController.py  service.py
schemas/: cctvBaseSchemas.py  cctvCreateRequest.py  videoBaseSchemas.py  videoFindAllRequest.py  videoFindAllResponse.py
service/: cctvService.py  videoService.py
src/: main.py
src/core/: config.py
src/db/: connection.py  session.py
src/db/models/: User.py
src/routers/: user_router.py
src/views/: user_view.py
