[tool.poetry]
name = "switchon_backend"
version = "0.1.0"
description = ""
authors = ["ajeong <ajung7038@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
uvicorn = "^0.30.4"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"
sqlalchemy-orm = "^1.2.10"
load-dotenv = "^0.1.0"
cryptography = "^43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
        { include = "switchon_backend" },
        {include = "cctv", from = "routers"},
        {include = "*.py*", from = "src"}
]
